<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>hloc_cpp</name>
  <version>0.0.0</version>
  <description>
    Hierarchical Localization in C++
  </description>
  <maintainer email="developers@sevensense.ch">ASL</maintainer>
  <license>Closed</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>pybind11_catkin</depend>
  <depend>opengv</depend>
  <depend>libnabo</depend>

</package>
